Transforming parent pom into Scala.